Add configuration files and refactor game-related controllers for improved functionality
- Create launch.json, settings.json, and tasks.json for VSCode setup
- Update build.gradle to specify Java toolchain version
- Refactor GameInitiateController and GameLaunchController to use HttpServletRequest
- Modify PlayerService to handle player registration and updates more effectively
- Update SecurityConfig to streamline authentication handling
- Adjust GameSettingsService for better settings retrieval
- Change application.properties to set context path for server

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 debug=true
-spring.webflux.base-path=/api/rgs
+server.servlet.context-path=/api/rgs
 rgs.engines.dir=/Users/raghu/IdeaProjects/rgs-develop/server/build/libs/engines
 
 
