--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 debug=true
 
+server.servlet.context-path=/api/rgs
+
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd} %d{HH:mm:ss.SSS} [%thread] %-5level [%X{traceId}/%X{spanId}] %c{0}:%L [%X{session}] - %msg%n
