Game Play works.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-debug=true
+debug=false
 server.servlet.context-path=/api/rgs
 rgs.engines.dir=/Users/raghu/IdeaProjects/rgs-develop/server/build/libs/engines
 
@@ -8,4 +8,4 @@ spring.data.mongodb.database=test
 spring.data.mongodb.authenticationDatabase=admin
 spring.data.mongodb.auto-index-creation=true
 
-logging.level.org.springframework.data.mongodb.core.ReactiveMongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
