feat: Add settings template, token management, and user credential system
- Implemented SettingsTemplate, SettingsTemplateMapper, and SettingsTemplateService for managing game settings.
- Created StreakPromotionGameFlowPipelineHandler to handle streak promotions in game flows.
- Added TenantDocument and TenantStore for tenant management.
- Introduced token management with Token, TokenDocument, TokenMapper, TokenService, and TokenStore for handling authentication tokens.
- Developed User, UserCredential, UserCredentialDocument, UserCredentialMapper, UserCredentialService, UserDocument, UserMapper, UserService, and UserStore for user management and authentication.
- Added utility classes PermissionsUtils and TenantUtils for permission handling and tenant resolution.

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,11 @@ repositories {
     mavenCentral()
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+    }
+}
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -35,6 +40,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
     implementation('io.jsonwebtoken:jjwt-jackson:0.13.0')
 
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 
     implementation "in.aimlabs:rng:$RNG_VERSION"
     implementation "org.javamoney:moneta:1.4.5"
