--- a/server/src/test/resources/application.properties
+++ b/server/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 debug=false
 server.servlet.context-path=/api/rgs
-rgs.engines.dir=/Users/raghu/IdeaProjects/rgs-develop/server/build/libs/engines
+rgs.engines.dir=build/libs/engines
 
 
 spring.data.mongodb.database=test
