--- a/server/build.gradle
+++ b/server/build.gradle
@@ -23,6 +23,8 @@ repositories {
 configurations.all {
     resolutionStrategy {
         force 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+        force 'net.bytebuddy:byte-buddy:1.18.2'
+        force 'net.bytebuddy:byte-buddy-agent:1.18.2'
     }
 }
 
@@ -85,5 +87,7 @@ dependencies {
 
 }
 
-dependencies {
+tasks.named('test') {
+    useJUnitPlatform()
+    jvmArgs += ['-Xshare:off']
 }
