Add SpinOro operator integration and refactor game operators
- Updated settings.gradle to include new SpinOro, Parimatch, and Reevo operators.
- Added SpinOro API documentation PDF.
- Created build.gradle for SpinOro with necessary dependencies.
- Implemented SpinOroConnectController for game launch and history retrieval.
- Developed SpinOroPlayerServiceAdaptor for player account management and transactions.
- Refactored rgs-core dependencies to use Spring Boot starter for web.
- Enhanced SystemErrorCode to include GENERAL_API_ERROR.
- Removed deprecated Balance and Wallet classes from server package.
- Updated IGameLaunchService interface to include game replay functionality.

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ AXION_RELEASE_VERSION=1.19.0
 JAR_CLASS_LOADER_VERSION=5.0.0-RELEASE
 
 LOMBOK_VERSION=1.18.42
-#JAVAX_ANNOTATION_API_VERSION=1.3.2
+JAVAX_ANNOTATION_API_VERSION=1.3.2
 MAPSTRUCT_VERSION=1.6.3
 JJWT_VERSION=0.11.5
 #
