--- a/game-providers/qubitgames/build.gradle
+++ b/game-providers/qubitgames/build.gradle
@@ -13,7 +13,7 @@ dependencyManagement {
 
 dependencies {
 
-    implementation ('org.springframework:spring-web')
+    implementation ('org.springframework.boot:spring-boot-starter-web')
     implementation 'org.springframework:spring-context'
 
     implementation 'org.slf4j:slf4j-api'
