feat(marvel): add MarvelPlayerServiceAdaptor for player account management
- Implemented MarvelPlayerServiceAdaptor to handle player account operations.
- Added methods for player initialization, balance retrieval, and transaction processing.
- Integrated retry logic for API calls with exponential backoff.
- Created necessary request and response models for communication with the Marvel API.

feat(reevo): add integration documentation and images

- Added integration documentation for Reevo API including game list and game launch methods.
- Included example requests and responses for better understanding.
- Added flow charts and images to illustrate the integration process.

chore: update settings.gradle to include Marvel operator

- Updated settings.gradle files across multiple modules to include the new Marvel operator.
- Ensured that the Marvel operator is included in the build process for the server and operators.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -47,7 +47,9 @@ dependencies {
 
     implementation  project(':operators:bf-games')
     implementation  project(':operators:parimatch')
-    
+    implementation  project(':operators:reevo')
+    implementation  project(':operators:spinoro')
+    implementation  project(':operators:marvel')
 
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
     implementation('io.jsonwebtoken:jjwt-jackson:0.13.0')
