--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include 'operators:bf-games'
 include 'operators:parimatch'
 include 'operators:reevo'
 include 'operators:spinoro'
+include 'operators:marvel'
