feat(spinoro): add SpinOroConnectController and SpinOroPlayerServiceAdaptor for game launching and player management
chore(build): update dependencies to include slotegrator and softswiss operators

refactor(server): enhance GameEnginesApplicationContextInitializer to implement CommandLineRunner for better initialization

fix(properties): disable debug mode in application.properties for production readiness

test(AppServer): add delay in contextLoads test to ensure stability

feat(test): implement RemoteGameServerLocalServer for local testing with MongoDB and Redis integration

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation  project(':operators:reevo')
     implementation  project(':operators:spinoro')
     implementation  project(':operators:marvel')
+    implementation  project(':operators:slotegrator')
+    implementation  project(':operators:softswiss')
 
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
     implementation('io.jsonwebtoken:jjwt-jackson:0.13.0')
@@ -98,4 +100,15 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
     jvmArgs += ['-Xshare:off']
+}
+
+tasks.register('runLocalTestServer', JavaExec) {
+    group = 'application'
+    description = 'Runs RemoteGameServerLocalServer using the test runtime classpath (includes src/test/resources).'
+    dependsOn tasks.named('testClasses')
+
+    classpath = sourceSets.test.runtimeClasspath
+    mainClass = 'aimlabs.gaming.rgs.RemoteGameServerLocalServer'
+
+    // Forward any args: ./gradlew :server:runLocalTestServer --args="--spring.profiles.active=..."
 }
