--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,5 @@ include 'operators:parimatch'
 include 'operators:reevo'
 include 'operators:spinoro'
 include 'operators:marvel'
+include 'operators:slotegrator'
+include 'operators:softswiss'
