--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ pluginManagement {
     plugins {
         //id 'com.google.cloud.tools.jib' version '3.4.4'
         id 'org.springframework.boot' version "${SPRING_BOOT_VERSION}"
+        id 'com.google.cloud.tools.jib' version '3.5.2'
     }
 }
 
