Refactor RestClient usage across multiple service adaptors to use RestClient.Builder for improved configuration and initialization.
- Updated BFGamesPlayerServiceAdaptor, MarvelPlayerServiceAdaptor, ParimatchPlayerServiceAdaptor, ReevoPlayerServiceAdaptor, SpinOroPlayerServiceAdaptor, DefaultPlatformPlayerServiceManager, and DefaultPlatformV1PlayerServiceManager to replace direct RestClient instantiation with a builder pattern.
- Removed unnecessary methods for URL building and settings retrieval, simplifying the code.
- Enhanced logging configuration for better traceability and observability, including the addition of Micrometer tracing and actuator support.
- Introduced RequestTimingFilter for measuring request processing time and logging tenant context.
- Updated application properties for improved logging and tracing capabilities.
- Added Kubernetes logging configuration for HTTP request/response logging.
- Removed obsolete RestTemplateBuilderConfiguration and RestClientConfiguration classes.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -52,6 +52,7 @@ configurations.all {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     //implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -117,6 +118,7 @@ dependencies {
     testImplementation("org.testcontainers:mongodb:1.20.3")
 
 
+    implementation("io.micrometer:micrometer-tracing-bridge-otel") // Log correlation + tracing context (no export)
 }
 
 tasks.named('test') {
@@ -149,14 +151,13 @@ tasks.register('runLocalTestServer', JavaExec) {
 
     classpath = sourceSets.test.runtimeClasspath
     mainClass = 'aimlabs.gaming.rgs.RemoteGameServerLocalServer'
-
     // Forward any args: ./gradlew :server:runLocalTestServer --args="--spring.profiles.active=..."
 }
 
 // workaround https://github.com/GoogleContainerTools/jib/issues/3132
-    tasks.matching { it.name in ['jibDockerBuild', 'jibBuildTar', 'jib'] }.configureEach {
-            notCompatibleWithConfigurationCache("Jib is not compatible with configuration cache")
-    }
+tasks.matching { it.name in ['jibDockerBuild', 'jibBuildTar', 'jib'] }.configureEach {
+    notCompatibleWithConfigurationCache("Jib is not compatible with configuration cache")
+}
 
 
 
@@ -189,26 +190,26 @@ jib {
         labels = ['org.opencontainers.image.source': "https://github.com/${orgName}/${project.getRootProject().name}"]
     }
 
-     extraDirectories {
-         paths {
-             path {
-                 // copies the contents of 'src/main/extra-dir' into '/' on the container
-                 from = file('build/libs/engines')
-                 into = '/workspace/engines'
-             }
-             path {
-                 // copies the contents of 'src/main/another/dir' into '/extras' on the container
-                 from = file("docker/htcheck")
-                 into = '/workspace/utils'
-             }
-         }
+    extraDirectories {
+        paths {
+            path {
+                // copies the contents of 'src/main/extra-dir' into '/' on the container
+                from = file('build/libs/engines')
+                into = '/workspace/engines'
+            }
+            path {
+                // copies the contents of 'src/main/another/dir' into '/extras' on the container
+                from = file("docker/htcheck")
+                into = '/workspace/utils'
+            }
+        }
 
-         permissions = [
-                 '/workspace/utils/htcheck': '777',  // Read/write/execute for owner, read/execute for group/other
-                 //'/path/to/another/file': '644',  // Read/write for owner, read-only for group/other
-                 //'/glob/pattern/**/*.sh': 755
-         ]
-     }
+        permissions = [
+                '/workspace/utils/htcheck': '777',  // Read/write/execute for owner, read/execute for group/other
+                //'/path/to/another/file': '644',  // Read/write for owner, read-only for group/other
+                //'/glob/pattern/**/*.sh': 755
+        ]
+    }
 }
 
 
