--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 debug=false
+spring.application.name=aggregation
 
+management.tracing.enabled=true
+management.otlp.tracing.export.enabled=false
+management.endpoints.web.exposure.include=*
+management.tracing.sampling.probability=1.0
+management.metrics.distribution.percentiles-histogram.greeting=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+logging.include-application-name=true
 server.servlet.context-path=/api/rgs
 logging.level.root=INFO
-logging.pattern.console=%d{yyyy-MM-dd} %d{HH:mm:ss.SSS} [%thread] %-5level [%X{traceId}/%X{spanId}] %c{0}:%L [%X{session}] - %msg%n
+#logging.pattern.console=%d{yyyy-MM-dd} %d{HH:mm:ss.SSS} [%thread] %-5level [%X{traceId}/%X{spanId}] %c{0}:%L [%X{session}] - %msg%n
+#logging.pattern.console=%d{yyyy-MM-dd} %d{HH:mm:ss.SSS} [%thread] %-5level [%X{traceId}/%X{spanId}] %c{0}:%L - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%X{traceId:-},%X{spanId:-},%X{tenant}] %logger{36} - %replace(%msg){'[\n\r]', ''}%n
